<resources>

    <string name="app_name">Fire</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">Burn the Doll</string>
    <string name="app_title">Burn the Doll!</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="title_activity_photo_menu">Burn the Doll</string>
    <string name="take_picture">Take a Picture</string>
    <string name="use_existing_pic">Use Existing Picture</string>
    <string name="use_default">Use Default</string>
    <string name="return_menu">Return to Menu</string>
    <string name="title_activity_camera">Camera</string>
    <string name="retake_pic">Retake Picture</string>
    <string name="done">Done</string>
    <string name="okay">Okay</string>
    <string name="title_activity_crop_pic">CropPic</string>
    <string name="title_activity_burn_doll">BurnDoll</string>

</resources>