<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/CameraButton"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/AlbumButton"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CameraButton"
        android:layout_below="@+id/CameraButton"
        android:layout_marginTop="42dp"
        android:text="@string/use_existing_pic" />

    <Button
        android:id="@+id/DefaultButton"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AlbumButton"
        android:layout_below="@+id/AlbumButton"
        android:layout_marginTop="42dp"
        android:text="@string/use_default" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/DefaultButton"
        android:layout_below="@+id/DefaultButton"
        android:layout_marginTop="42dp"
        android:text="@string/return_menu" />

</RelativeLayout>
