<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/app_title"
        android:textColor="@color/orange"
        android:textColorHint="@color/white"
        android:textSize="36dp" />

    <ImageView
        android:id="@+id/titleImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleText"
        android:layout_below="@+id/titleText"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/fire"
        android:contentDescription="placeholder graphic" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleText"
        android:layout_alignRight="@+id/titleText"
        android:layout_below="@+id/titleImg"
        android:layout_marginTop="36dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/settingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startBtn"
        android:layout_alignRight="@+id/startBtn"
        android:layout_below="@+id/startBtn"
        android:layout_marginTop="14dp"
        android:text="@string/settings" />
    
</RelativeLayout>
